static/css/custom.css
/* Fonts */
@font-face {
    font-family: "cookiesmilk";
    src: url(../assets/cookiesmilk.eot); /* IE9 Compat Modes */
    src:
        url(../assets/cookiesmilk.eot?#iefix) format('embedded-opentype'), /* IE6-IE8 */
        url(../assets/cookiesmilk.woff2) format('woff2'), /* Modern Browsers */
        url(../assets/cookiesmilk.woff) format('woff'), /* Modern Browsers */
        url(../assets/cookiesmilk.ttf) format('truetype'); /* Safari, Android, iOS */
    font-weight: normal;
    font-display: swap;
}

html {
    font-size: calc(1em + 1vw);
}

body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 0.9rem;
    line-height: 150%;
}

h1, h2, h3, .navbar-brand {
    font-family: "cookiesmilk";
}

h1 {
    font-size: calc(2em + 7.5vw);
    color: #111;
}

.navbar .navbar-brand {
    font-size: calc(1.2em + 0.5vw);
    font-weight: initial;
}

.navbar .navbar-brand a:hover,
.navbar .navbar-brand a:focus,
.navbar .navbar-brand a:active {
    text-decoration: none;
}

h2 {
    font-size: calc(1.5em + 2.0vw);
    color: #777;
}

h3 {
    font-size: 2rem;
}

h4 {
    text-align: center;
    font-weight: 700;
}

@media only screen and (min-width: 856px) {
    html { font-size: 1.5em; }
    h1 { font-size: 5.0em; }
    h2 { font-size: 2.3em; }
}

code {
    color: #1E4147;
    background: #E6F7D4;
}

/* Header (Sticky menu bar) */
#header {
    top: 0;
    z-index: 2;
    width: 100%;
    height: 2.1rem;
    font-weight: 700;
    border-bottom: 1px #eee solid;
}

:target:before {
    content: "";
    display: block;
    height: 2.5rem;
    margin: -2.5rem 0 0;
}

/* Hero (Headline and subtitle) */
#hero {
    padding-top: 4rem;
}

/* Homepage */
body.homepage h2 {
    font-size: 1.5em;
    max-width: 500px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

body.homepage #intro p:last-child {
    margin-bottom: 0px;
}

.card a:hover,
.card a:focus {
    text-decoration: none;
}

.card a:hover .card-title,
.card a:focus .card-title {
    text-decoration: underline;
}

.filter .filter-tag#tag-0:checked ~ .filter-nav .btn[for="tag-0"],
.filter .filter-tag#tag-1:checked ~ .filter-nav .btn[for="tag-1"],
.filter .filter-tag#tag-2:checked ~ .filter-nav .btn[for="tag-2"],
.filter .filter-tag#tag-3:checked ~ .filter-nav .btn[for="tag-3"],
.filter .filter-tag#tag-4:checked ~ .filter-nav .btn[for="tag-4"],
.filter .filter-tag#tag-5:checked ~ .filter-nav .btn[for="tag-5"],
.filter .filter-tag#tag-6:checked ~ .filter-nav .btn[for="tag-6"],
.filter .filter-tag#tag-7:checked ~ .filter-nav .btn[for="tag-7"],
.filter .filter-tag#tag-8:checked ~ .filter-nav .btn[for="tag-8"] {
    background: #5755d9;
    color:#fff;
}

.divider[data-content]::after {
    color: #3b4351;
}

/* Lists */
.entry-icon-wrapper {
    height: 2rem;
    width: 2rem;
    margin-right: 1rem;
    position: relative;
    float: left;
}

.entry-icon {
    max-height: 2rem;
    max-width: 2rem;
    height: 99rem;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.list.simple .entry-title {
    display: none;
}

.list.simple .entry-icon-wrapper {
    float: right;
    margin-left: 1rem;
    margin-right: 0;
}

.list.simple .infobox {
    padding: 0.5rem;
}

.infobox :last-child {
    margin-bottom: 0;
}

.infobox :first-child {
    margin-top: 0;
}

.infobox {
    padding: 1rem;
    margin-bottom: 1.2rem;
    border-left: 10px solid #ccc;
}

.infobox.green {
    border-left: 10px solid #5cb85c;
    background: #f1f9f1;
    color: #3d8b3d;
}

.infobox ul, .ls-none {
    list-style: none;
}

.infobox ul ul,
.infobox ul ul li {
    display: inline;
}

.infobox ul ul li:not(:first-child)::before {
    content: '| ';
}

@media (max-width:480px) {
    .infobox ul ul li:not(:first-child)::before,
    .infobox ul ul li:first-child::before {
        content: "\A";
        white-space: pre;
    }

    .list.simple .infobox ul ul li:first-child::before {
        display: none;
    }

    .list.simple .infobox ul ul {
        margin-left: 0;
    }
}

.list.simple .infobox strong {
    display: none;
}

blockquote {
    font-style: italic;
}

.mx-auto {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* Articles */
.type-articles h3 {
    font-size: 1.3rem;
    font-weight: 700;
}

/* Footer */
html, body {
    height: 100%
}

#container {
    min-height: 100%;
    position: relative;
}

#footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 75px;
}

#content {
    padding-bottom: 75px;
}

